--- a/style/components.css
+++ b/style/components.css
@@ -23,6 +23,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin-right: 654px;
 }
 .date{
     font-family: "Pretendard Variable";
