--- a/style.css
+++ b/style.css
@@ -83,10 +83,8 @@ html, body {
 }
 #newsstand-gray #content{
   text-align: left;
-  background-color: aqua;
   border: 1px solid #e0e0e0; /* 박스를 위한 테두리 */
   padding: 15px; /* 내부 여백을 설정하여 텍스트와 박스 사이에 공간을 만듦 */
-  border-radius: 4px; /* 모서리를 둥글게 만듦 */
   background-color: #f9f9f9; /* 배경 색상 설정 (연한 회색) */
   width: 45%; /* 항목의 너비를 설정하여 두 항목이 균등하게 배치되도록 함 */
 }
@@ -118,6 +116,7 @@ html, body {
   left: 201;
   right: 209;
   bottom: 84;
+  background-color: aqua;
 }
 #mediaheader {
   display: flex; /* Flexbox로 자식 요소를 가로로 배치 */
@@ -161,8 +160,12 @@ html, body {
   font-size: 0; /* 텍스트 크기 숨김 */
 }
 
+
+
+
+
 #newsstand-grid {
-  display: grid;
+  display: none; /* 그리드 잠깐 숨기기 */
   height : 450px;
   width : 1245px;
   grid-template-rows: 112.5px 112.5px 112.5px 112.5px;
@@ -182,4 +185,15 @@ html, body {
 .news-icon {
   width: 50px; 
   height: 50px;
+}
+
+#listcontent{
+  position: absolute;
+  width: 1247px;
+  height: 60px;
+  border: 1px solid #e0e0e0; /* 박스를 위한 테두리 */
+  padding: 15px; /* 내부 여백을 설정하여 텍스트와 박스 사이에 공간을 만듦 */
+  background-color: #f9f9f9; /* 배경 색상 설정 (연한 회색) */
+  margin-top: -557;
+  margin-left: 201;
 }
